--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="text-2xl font-bold text-gray-800 mb-4">🔍 Buscar alojamientos en Airbnb</h1>
         
         <label for="city" class="block text-gray-700 font-medium text-left mb-2">Ciudad:</label>
-        <input type="text" id="city" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Ej: Madrid">
+        <input type="text" id="city" class="w-full p-3 border rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Ej: Denia">
         
         <button id="scrapeButton" class="w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300">
             Buscar
